# Tilted-Hexarotor-Omnicopter

./: README.md
RotorS_ws/: .ycm_extra_conf.py
RotorS_ws/devel/: .catkin  local_setup.sh  setup.sh
RotorS_ws/devel/lib/pkgconfig/: omnicopter_controller.pc  rotors_comm.pc  rotors_control.pc  rotors_description.pc  rotors_evaluation.pc  rotors_gazebo.pc  rotors_gazebo_plugins.pc  rotors_hil_interface.pc  rotors_joy_interface.pc  rqt_rotors.pc
RotorS_ws/devel/lib/python2.7/dist-packages/rosbag_tools/: __init__.py
RotorS_ws/devel/lib/python2.7/dist-packages/rqt_rotors/: __init__.py
RotorS_ws/devel/lib/rotors_hil_interface/: rotors_hil_interface_node
RotorS_ws/devel/lib/rotors_joy_interface/: rotors_joy_interface
RotorS_ws/devel/share/omnicopter_controller/cmake/: omnicopter_controllerConfig.cmake
RotorS_ws/devel/share/roseus/ros/rotors_comm/: manifest.l
RotorS_ws/devel/share/rotors_comm/cmake/: rotors_comm-msg-paths.cmake  rotors_commConfig.cmake
RotorS_ws/devel/share/rotors_control/cmake/: rotors_controlConfig.cmake
RotorS_ws/devel/share/rotors_description/cmake/: rotors_descriptionConfig.cmake
RotorS_ws/devel/share/rotors_evaluation/cmake/: rotors_evaluationConfig.cmake
RotorS_ws/devel/share/rotors_gazebo/cmake/: rotors_gazeboConfig.cmake
RotorS_ws/devel/share/rotors_gazebo_plugins/cmake/: rotors_gazebo_pluginsConfig.cmake
RotorS_ws/devel/share/rotors_hil_interface/cmake/: rotors_hil_interfaceConfig.cmake
RotorS_ws/devel/share/rotors_joy_interface/cmake/: rotors_joy_interfaceConfig.cmake
RotorS_ws/devel/share/rqt_rotors/cmake/: rqt_rotorsConfig.cmake
RotorS_ws/src/omnicopter_controller/: CMakeLists.txt
RotorS_ws/src/omnicopter_controller/include/omnicopter_controller/: common.h  omnicopter_attitude_controller.h  omnicopter_body_angular_velocity_controller.h  omnicopter_control_allocator.h  omnicopter_position_controller.h  parameters.h  parameters_ros.h
RotorS_ws/src/omnicopter_controller/src/: omnicopter_attitude_controller.cpp  omnicopter_body_angular_velocity_controller.cpp  omnicopter_control_allocator.cpp  omnicopter_position_controller.cpp
RotorS_ws/src/rotors_description/launch/: xacrodisplay_techpod.launch
RotorS_ws/src/rotors_description/urdf/: omnicopter.xacro  omnicopter_base.xacro  omnicopter_multirotor_base.xacro
RotorS_ws/src/rotors_gazebo/launch/: omnicopter_hovering_example.launch  omnicopter_with_waypoint_publisher.launch
RotorS_ws/src/rotors_gazebo/resource/: omnicopter.yaml
RotorS_ws/src/rotors_gazebo/src/: hovering_example.cpp
